# Nano-Utils

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  NOTICE  README.md  README.rst  conftest.py  linting_requirements.txt  mypy.ini  myscript.py  numpy_ge_1_20.py  pyproject.toml  setup.cfg  setup.py
.github/actions/: action.yml
.github/workflows/: pypi.yml  pythonpackage.yml  rebase.yml
docs/: 0_documentation.rst  1_utils.rst  2_empty.rst  3_schema.rst  4_typing.rst  5_numpy.rst  6_file_container.rst  6_set_attr.rst  7_testing_utils.rst  8_hdf5_utils.rst  9_yaml_utils.rst  _6_set_attr.rst  _set_attr.rst  conf.py  includeme.rst  index.rst
nanoutils/: README.rst  __init__.py  __version__.py  _catch_err.py  _dtype_mapping.py  _lazy_import.py  _module_proxy.py  _partial.py  _partial.pyi  _seq_view.py  _set_attr.py  _user_dict.py  _user_function.py  empty.py  file_container.py  hdf5_utils.py  numpy_utils.py  schema.py  set_attr.py  testing_utils.py  typing_utils.py  utils.py  yaml_utils.py
nanoutils/src/: _c_module_proxy.c  seq_view.c
tests/: conftest.py  test_build.py  test_dtype_mapping.py  test_empty.py  test_hdf5.py  test_lazy_import.py  test_sequence_view.py  test_set_attr.py  test_sphinx.py  test_testing_utils.py  test_typing.py  test_user_func.py  test_user_mapping.py  test_utils.py
tests/test_files/: test.hdf5
types/h5py/: __init__.pyi
