[metadata]
description_file = README.rst

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = nanoutils

[flake8]
max-line-length = 100

[tool:pytest]
testpaths = nanoutils docs tests
addopts = --tb=short --doctest-glob='*.py' --doctest-glob='*.rst' --cache-clear --cov=nanoutils --cov-report xml --cov-report term --cov-report html

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[pydocstyle]
convention = numpy
add-ignore = D401
ignore-decorators = overload
